Bug 569276 - [15][test] port EnumTest for local enums
Change-Id: Ia42d6b5a9025b552cec73d0d2d9fa70d6c696cc6
Signed-off-by: Kalyan Prasad Tatavarthi <kalyan_prasad@in.ibm.com>